--- a/web/app/views/events/show.amp.erb
+++ b/web/app/views/events/show.amp.erb
@@ -13,7 +13,7 @@
   "image": [
     "<%= @event.image[:original].url %>"
    ],
-  "description": "<%= strip_tags @event.details_description %>",
+  "description": "<%= strip_tags(@event.details_description).gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]/i, '') %>",
   "url": "<%= event_path @event %>",
   "location": {
     "@type": "Place",
@@ -118,4 +118,3 @@
     </amp-list>
   </div>
 </div>
-
