--- a/web/app/views/feeds/today.html.erb
+++ b/web/app/views/feeds/today.html.erb
@@ -7,9 +7,7 @@
 <% content_for :meta_description, "Descubra as festas, shows, feiras, teatros, palestras, festivais, exposições e filmes que acontecem hoje dia #{I18n.l(Date.today, format: :long)} e amanhã." %>
 
 <script type="application/ld+json">
-  [
-    <%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event, cached: true %>
-  ]
+  [<%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>]
 </script>
 
 <%= render partial: "components/collection/collection", locals: @locals %>
