--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -1,5 +1,12 @@
+@import "@material/textfield/mdc-text-field";
+@import "@material/button/mdc-button";
+@import "components/me-button";
+@import "components/me-text-field";
 @import "media-queries";
 @import "variables";
+
+$mdc-typography-font-family: $font-secondary-family;
+$mdc-theme-primary: $brand-color;
 
 $font-primary-family: "Montserrat", sans-serif;
 $font-secondary-color: #4f4f4f;
@@ -32,7 +39,7 @@ a {
     background-repeat: no-repeat;
     background-position: top center;
     max-width: 100vw;
-    &.is-pwa  {
+    &.is-pwa {
       min-height: 100vh;
       background-size: auto;
       padding: 0;
@@ -55,6 +62,7 @@ section {
     color: $brand-color;
     padding: 0 10px;
   }
+
   .is-pwa & {
     @include mobile-only {
       align-self: stretch;
@@ -72,6 +80,7 @@ section {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
   & img {
     //max-width: 200px;
     position: relative;
@@ -128,7 +137,6 @@ section {
     font-weight: bold;
     font-size: 34px;
     line-height: 120%;
-    max-width: 80%;
 
     @include mobile-only {
       font-size: 26px;
@@ -159,18 +167,14 @@ section {
 }
 
 .invite {
-  margin: 30px 0 0 0;
+  margin: 20px 0 0 0;
   position: relative;
-  //overflow: hidden;
   width: 100%;
-  //padding-bottom: 160px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
+  transition: transform 350ms ease;
   @include mobile-only {
     margin: 24px auto 0 auto;
-    padding-bottom: 60px;
+    padding-bottom: 45px;
     .is-pwa & {
       margin: 16px auto 0 auto;
     }
@@ -187,7 +191,10 @@ section {
     .invite__status {
       display: block;
       opacity: 1;
-      padding: 0 24px;
+      background: #08994c26;
+      padding: 12px;
+      margin: 0 24px;
+      border-radius: 6px;
     }
 
     .invite__cta {
@@ -202,9 +209,14 @@ section {
       opacity: 1 !important;
     }
 
-    .shareBtn--invite {
-      opacity: 1;
-      display: flex;
+    //.shareBtn--invite {
+    //  opacity: 1;
+    //  display: flex;
+    //}
+
+    .invite__email {
+      opacity: 0 !important;
+      display: none !important;
     }
 
     .invite__loginButtons {
@@ -298,54 +310,96 @@ section {
   }
 
   &__loginButtons {
-    margin: 36px auto;
-    justify-content: center;
+    margin: 24px 30px;
     opacity: 0;
     transition: opacity 0.4s ease;
     display: none;
     flex-wrap: wrap;
+    border-top: 1px solid #e3e8ed;
+    padding: 24px 0 0 0;
     @include mobile-only {
-      margin: 6px auto;
+      justify-content: center;
+      margin: 30px auto;
       flex-direction: column;
     }
   }
 
+  &__email {
+    padding: 0 24px;
+    justify-content: space-between;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    @include mobile-only {
+      padding: 0 18px;
+      flex-direction: column;
+    }
+
+    & .me-text-field {
+      width: 50%;
+      margin: 0 6px;
+      @include mobile-only {
+        width: calc(100% - 12px);
+        margin: 6px 6px;
+      }
+    }
+
+    & .me-button {
+      height: auto;
+      min-height: 50px;
+      @include mobile-only {
+        margin: 6px 0 0 0;
+      }
+    }
+  }
+
   &__button {
-    margin: 0 12px;
+    margin: 0 6px;
     padding: 12px 16px;
     border-radius: 36px;
     color: $surface-color;
     font-family: $font-primary-family;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 500;
     line-height: 22px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     @include mobile-only {
       margin: 5px 24px;
       text-align: center;
       padding: 18px 0;
     }
 
+    & svg {
+      height: 18px;
+      margin: 0 10px 0 0;
+    }
+
     &-gmail {
-      background: #d44a3d;
+      color: #d44a3d;
+      box-shadow: $surface-z10-box-shadow;
     }
 
     &-facebook {
-      background: #4267b2;
+      color: #4267b2;
+      box-shadow: $surface-z10-box-shadow;
     }
 
     &-instagram {
-      color: $font-primary-color;
+      color: $font-secondary-color;
       //width: 90vw;
       text-align: center;
-      margin: 6px auto;
+      margin: 0 auto;
       line-height: 1.35em;
-      font-size: 16px;
+      font-size: 13px;
+      display: none;
       @include mobile-only {
         display: none;
       }
 
-      & b {
+      & a {
         color: #C13584;
         border-bottom: 1px solid;
       }
@@ -434,9 +488,9 @@ section {
 
 .shareBtn {
   position: relative;
-  margin: 24px auto;
+  margin: 0 auto;
   background: white;
-  transition: opacity 0.4s ease;
+  transition: opacity 250ms ease, transform 300ms ease;
   border: 0;
   display: flex;
   align-items: center;
@@ -445,6 +499,7 @@ section {
   box-shadow: 0 0 30px #0000004d;
   border-radius: 35px;
   z-index: 5;
+  will-change: opacity, transform;
   -webkit-tap-highlight-color: transparent;
   -webkit-user-select: none;
   @include desktop-only {
@@ -452,13 +507,19 @@ section {
   }
 
   & i {
-    margin: 0px 6px 0 0;
+    margin: 0 6px 0 0;
+  }
+
+  &.is-invited {
+    opacity: 1;
+    display: flex;
+    transform: translateY(0);
   }
 
   &--invite {
     opacity: 0;
     display: none;
-    transform: translate(0px, 50px);
+    transform: translateY(50px);
   }
 }
 
@@ -542,7 +603,7 @@ section {
   background-position: center top;
   background-repeat: no-repeat;
   background-size: auto;
-  margin:0;
+  margin: 0;
   z-index: 2;
   position: relative;
   transition: transform 850ms ease;
